--- a/catalan.dtx
+++ b/catalan.dtx
@@ -277,7 +277,7 @@
     
     \begin{table}[ht]
       \centering
-      \caption{Aspecte de la ela geminada impresa en diversos tipus de lletra lliures usant el paquet \babelcat{} sota un motor pdf\TeX. Noteu que amb aquest motor el mètode recomanat (\foreignlanguage{english}{l + · + l}´) produeix un espaiat massa gran, que esdevé clarament erroni en el tipus \textit{Latin Modern}.}\label{tbl:lgem-pdftex}
+      \caption{Aspecte de la ela geminada impresa en diversos tipus de lletra lliures usant el paquet \babelcat{} sota un motor pdf\TeX. Noteu que amb aquest motor el mètode recomanat (\foreignlanguage{english}{l + · + l}) produeix un espaiat massa gran, que esdevé clarament erroni en el tipus \textit{Latin Modern}.}\label{tbl:lgem-pdftex}
       \vspace{5pt}
       \includegraphics{lgem-pdftex.pdf}
     \end{table}
